get initial test framework setup, and get first test working all the way to a secured elasticsearch
