# api/controllers/case.js
@@ -3,17 +3,47 @@
 var util = require('util');
 var process = require('process');
 var groups = require('../helpers/groups');
+var es = require("../helpers/es")
 
-function newCase(req, res) {
-  groups.user_has(req, 'Curators', function() {
-    console.log("user doesn't have curators")
+function newCase(req, res) { // is a PUT
+  groups.user_has(req, 'Contributors', function() {
+    console.log("user doesn't have Contributors group membership")
     res.status(401).json({message:'access denied - user does not have proper authorization'});
-  }, function () {
+    return
+  }, function() {
     console.log("user is in curators group")
-    res.json(req.body);
+    // figure out what ElasticSearch query this corresponds to
+    // sign with with AWS4 module
+    es.index({
+      index: 'pp',
+      type: 'case',
+      body: req.body
+    }, function (error, response) {
+      if (error) {
+        res.status(error.status).json({message:error.message})
+      } else {
+        // console.log(response)
+        res.status(200).json(req.body)
+      }
+    })
   })
 }
 
+function editCaseById(req, res) {
+  groups.user_has(req, 'Contributors', function() {
+    console.log("user doesn't have Contributors group membership")
+    res.status(401).json({message:'access denied - user does not have proper authorization'});
+    return
+  }, function () {
+    var caseId = req.swagger.params.caseId.value
+    var caseBody = req.body
+    console.log("caseId", caseId, "case", caseBody)
+    res.status(200).json(req.body)
+  })
+}
+
+
 module.exports = {
+  editCaseById: editCaseById,
   newCase: newCase
 };
